Set themes for components, refactor themes to their files

--- a/NaukaAngulara/src/app/Components/card/card.component.scss
+++ b/NaukaAngulara/src/app/Components/card/card.component.scss
@@ -1,3 +1,17 @@
+
+
 .card-main {
     padding: 1rem;
 }
+
+.wrapper {
+    padding: 1rem;
+    border: 1px solid;
+    margin: 0rem;
+}
+
+
+div {
+    padding: 1rem;
+}
+
