--- a/NaukaAngulara/src/app/app.component.html
+++ b/NaukaAngulara/src/app/app.component.html
@@ -7,11 +7,21 @@
   <br />
   <mat-card class="select">
     <mat-select placeholder="Theme" [(ngModel)]="theme">
-      <mat-option value="first-theme">Theme</mat-option>
-      <mat-option value="second-theme">My second theme</mat-option>
+      <mat-option value="qperior-theme">Q-PERIOR</mat-option>
+      <mat-option value="green-theme">GREEN</mat-option>
+      <mat-option value="purple-theme">PURPLE</mat-option>
+      <mat-option value="ice-theme">ICE</mat-option>
+      <mat-option value="grey-theme">GREY</mat-option>
+
     </mat-select>
   </mat-card>
   <mat-card>
-    <app-card></app-card>
+    <app-card>
+    </app-card>
+  </mat-card>
+  <mat-card>
+    <app-card>
+
+    </app-card>
   </mat-card>
 </div>
