--- a/NaukaAngulara/src/app/Components/card/card.component.scss-theme.scss
+++ b/NaukaAngulara/src/app/Components/card/card.component.scss-theme.scss
@@ -4,12 +4,19 @@
     $primary: map-get($theme, primary);
     $accent: map-get($theme, accent);
     $warn: map-get($theme, warn);
+    $foreground: map-get($theme, foreground);
+    $background: map-get($theme, background);
 
     app-card {
-        >div {
+        padding: 1rem;
+
+        div {
             font-size: 1.5rem;
-            color: mat-color($primary, darker);
-            background-color: mat-color($accent);
+            color: mat-color($primary, default-contrast);
+            background-color: mat-color($primary);
+            box-shadow: 0px 3px 6px #555555;
+            border-radius: 20px;
         }
+
     }
 }
