--- a/NaukaAngulara/src/themes/qperior-light-theme.scss
+++ b/NaukaAngulara/src/themes/qperior-light-theme.scss
@@ -9,4 +9,10 @@ $my-qperior-primary: mat.define-palette(palette.$green-palette, 300, 200, 300);
 $my-qperior-accent: mat.define-palette(palette.$purple-palette, 300, 200, 300);
 $my-qperior-warn: mat-palette($mat-red, 800, 500, 900);
 
-$qperior-theme: mat-light-theme($my-qperior-primary, $my-qperior-accent, $my-qperior-warn);
+$qperior-typography: mat.define-typography-config($font-family: 'Showcard Gothic');
+
+$qperior-theme: mat.define-light-theme((color: (primary: $my-qperior-primary,
+                accent: $my-qperior-accent,
+                warn: $my-qperior-warn ),
+            typography: $qperior-typography,
+        ));
