--- a/NaukaAngulara/src/app/Components/card/card.component.scss-theme.scss
+++ b/NaukaAngulara/src/app/Components/card/card.component.scss-theme.scss
@@ -9,13 +9,16 @@
 
     app-card {
         padding: 1rem;
+        width: 20rem;
+        height: 10rem;
 
         div {
             font-size: 1.5rem;
-            color: mat-color($primary, default-contrast);
-            background-color: mat-color($primary);
+            color: mat-color($primary);
+            background-color: white; //mat-color($accent, lighter);
             box-shadow: 0px 3px 6px #555555;
             border-radius: 20px;
+            border-color: mat-color($accent, lighter);
         }
 
     }
