--- a/NaukaAngulara/src/app/layouts/general-layout/general-layout-home/components/navigation-bar/navigation-bar.component.scss
+++ b/NaukaAngulara/src/app/layouts/general-layout/general-layout-home/components/navigation-bar/navigation-bar.component.scss
@@ -1,5 +1,9 @@
 .navigation-bar {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
+}
+
+.nav-button {
+    width: 15rem;
 }
